<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<include
		android:id="@+id/app_bar"
		layout="@layout/content_appbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	
	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="12dp"
				android:hint="@string/movie_title"
				app:hintTextColor="@color/teal_700"
				app:layout_constraintTop_toBottomOf="@id/top_guideline"
				app:layout_constraintStart_toEndOf="@id/start_guideline"
				app:layout_constraintEnd_toStartOf="@id/end_guideline" >
				<androidx.appcompat.widget.AppCompatEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text"
					android:maxLines="1"
					android:singleLine="true"
					android:textCursorDrawable="@null" />
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/seasons_count"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:hint="@string/seasons"
				app:hintTextColor="@color/teal_700"
				app:layout_constraintTop_toBottomOf="@id/title"
				app:layout_constraintStart_toEndOf="@id/start_guideline"
				app:layout_constraintEnd_toStartOf="@id/end_guideline">
				<androidx.appcompat.widget.AppCompatEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="date"
					android:maxLines="1"
					android:singleLine="true"
					android:textCursorDrawable="@null" />
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/release_date_label"
				android:layout_width="0dp"
				android:layout_height="28dp"
				android:layout_marginTop="24dp"
				android:paddingEnd="16dp"
				android:paddingStart="0dp"
				android:gravity="center_vertical"
				android:text="@string/click_to_select_release_date"
				android:textSize="16sp"
				app:layout_constraintStart_toEndOf="@id/start_guideline"
				app:layout_constraintEnd_toStartOf="@id/release_date_icon"
				app:layout_constraintTop_toBottomOf="@id/seasons_count" />
			
			<ImageView
				android:id="@+id/release_date_icon"
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:contentDescription="@string/cd_release_date"
				app:tint="@color/teal_700"
				app:srcCompat="@drawable/ic_calender"
				app:layout_constraintEnd_toStartOf="@id/end_guideline"
				app:layout_constraintTop_toTopOf="@id/release_date_label"
				app:layout_constraintBottom_toBottomOf="@id/release_date_label" />
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/add_button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/add_movie"
				android:layout_marginStart="26dp"
				android:layout_marginEnd="26dp"
				android:paddingTop="16dp"
				android:paddingBottom="16dp"
				android:layout_marginTop="30dp"
				android:backgroundTint="@color/teal_700"
				android:textColor="@color/white"
				android:enabled="false"
				android:alpha="0.7"
				app:layout_constraintEnd_toStartOf="@id/end_guideline"
				app:layout_constraintStart_toEndOf="@id/start_guideline"
				app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
				app:layout_constraintTop_toBottomOf="@id/release_date_label" />
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/end_guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_end="16dp" />
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/start_guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_begin="16dp" />
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/bottom_guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_end="16dp" />
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/top_guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_begin="16dp" />
		
		</androidx.constraintlayout.widget.ConstraintLayout>
			
	</androidx.core.widget.NestedScrollView>
	
</LinearLayout>
